<resources>
    <string name="app_name">FocusAid</string>
    <string name="go_back_confirm_trigger_to_main_new_rule">규칙이 생성되지 않습니다.\n메인 화면으로 이동하시겠습니까?</string>
    <string name="go_back_confirm_trigger_to_main_old_rule">규칙이 수정되지 않습니다.\n메인 화면으로 이동하시겠습니까?</string>
    <string name="app_block_service_description">For FocusAid App Block Action</string>

    <!--  explanation strings in trigger/action edit fragment  -->
    <string name="location_trigger_explanation"><![CDATA[<i><b>지정한 장소</b>에서 <br>액션을 실행합니다 </i>]]></string>
    <string name="time_trigger_explanation"><![CDATA[<i><b>지정한 시간</b>에 <br>액션을 실행합니다 </i>]]></string>
    <string name="activity_trigger_explanation"><![CDATA[<i><b>선택한 활동을 감지</b>하면 <br>액션을 실행합니다 </i>]]></string>
    <string name="app_block_action_explanation"><![CDATA[<i>특정 앱의 사용 허용 시간을 지정하고 <br>사용을 제한하거나 경고를 받습니다 </i>]]></string>
    <string name="notification_action_explanation"><![CDATA[<i>특정 앱의 알림이나 특정 키워드와 <br> 관련된 알림을 별도로 처리합니다 </i>]]></string>
    <string name="dnd_action_explanation"><![CDATA[<i>방해 금지 모드를 실행합니다 </i>]]></string>
    <string name="ringer_action_explanation"><![CDATA[<i>원하는 소리 모드로 변경합니다 </i>]]></string>

    <!--  helper string in app block action fragment  -->
    <string name="app_block_entry_item_first_click"><![CDATA[<i>터치하여 추가 설정 </i>]]></string>

    <!-- strings in AppBlockEntryDialog -->
    <string name="app_block_entry_dialog_do_not_allow"><![CDATA[<big>사용을 허용하지 않음</big><br>(허용 시간을 0분으로 설정합니다)]]></string>

    <!--  Titles of items in description menu  -->
    <string name="edit_rule_name">규칙 이름 수정</string>
    <string name="edit_trigger_action">조건 및 액션 수정</string>

    <!--  texts for inclusion of notification keywords  -->
    <string name="include"><![CDATA[을(를) 메시지 및 발신자에 <b>포함하는</b> 알림을 숨깁니다.]]></string>
    <string name="exclude"><![CDATA[을(를) 메시지 및 발신자에 <b>포함하지 않는</b> 알림을 숨깁니다.]]></string>

    <string name="allow_accessibility_permission">"접근성 권한을 허용해주세요.\n(설치된 서비스 > FocusAid 허용)"</string>

    <string name="select_activity">활동 선택</string>
    <string name="while_driving">자동차 운전 중</string>
    <string name="while_riding_a_bicycle">자전거 운전 중</string>
    <string name="while_no_activity">활동이 감지되지 않을 때</string>
    <string name="cancel">취소</string>
    <string name="complete">완료</string>
    <string name="select_blocking_method">제한 방법을 선택하세요.</string>
    <string name="close_immediately">바로 종료</string>
    <string name="alert">경고 알림</string>
    <string name="close">종료하기</string>
    <string name="ok">확인</string>
    <string name="search_location">장소 검색</string>
    <string name="time_allowed">허용시간</string>
    <string name="hour_space_minute">시간 분</string>
    <string name="changed_settings_have_not_saved">설정이 변경되지 않습니다.\n뒤로 가시겠습니까?</string>
    <string name="no">아니오</string>
    <string name="yes">예</string>
    <string name="write_a_name_of_the_rule">규칙 이름을 설정해 주세요.</string>
    <string name="rule_name">규칙 이름</string>
    <string name="do_you_want_to_delete_it">삭제하시겠습니까?</string>
    <string name="execute_dnd_mode">방해금지모드를 실행합니다.</string>
    <string name="trigger_not_specified">조건을 설정하지 않으셨습니다.\n조건이 없으면 액션이 항상 수행된 상태로 유지됩니다.\n그대로 진행하시겠습니까?</string>
    <string name="notification_handling_method">알림 처리 방법</string>
    <string name="hide">알림 숨기기</string>
    <string name="vibration">진동으로 받기</string>
    <string name="ring">소리로 받기</string>
    <string name="silent">무음으로 받기</string>
    <string name="write_a_keyword">키워드를 입력하세요</string>
    <string name="enter_keyword">키워드 입력</string>
    <string name="allow_dnd_permission">방해금지모드 권한을 허용해주세요.</string>
    <string name="select_ringer_mode">소리 모드 선택</string>
    <string name="vibrate_mode">진동 모드</string>
    <string name="ring_mode">소리 모드</string>
    <string name="silent_mode">무음 모드</string>
    <string name="start">시작</string>
    <string name="end">종료</string>
    <string name="repeat_setting">반복 설정</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="is_the_information_correct">입력하신 정보가 올바릅니까?</string>
    <string name="set_actions">액션 설정하기</string>
    <string name="add_action">액션 추가</string>
    <string name="prev">이전</string>
    <string name="next">다음</string>
    <string name="select_action_type">추가할 액션 타입 선택하기</string>
    <string name="app_block">앱 사용 제한 설정</string>
    <string name="notification_handling">알림 처리 방법 설정</string>
    <string name="set_dnd_mode">방해 금지 모드 실행</string>
    <string name="change_ringer_mode">소리 모드 변경</string>
    <string name="select_action_type_you_want">실행할 액션의 타입을 선택하세요</string>
    <string name="cancel_prev">취소(이전)</string>
    <string name="app_block_settings">앱 사용 제한\n설정하기</string>
    <string name="add_apps_to_block">제한 앱 추가</string>
    <string name="back">뒤로</string>
    <string name="select_apps_to_block">제한할 앱 설정하기</string>
    <string name="search_app">앱 검색</string>
    <string name="all_apps_excluding_system_apps">모든 앱 제한하기 (전화 및 시스템 제외)</string>
    <string name="check_rule_spec">규칙 동작 확인</string>
    <string name="action_executed_when_following_triggers_are_all_satisfied">아래의 조건을 모두 충족하면 액션이 실행됩니다.</string>
    <string name="location_colon">장소:</string>
    <string name="time_colon">시간:</string>
    <string name="activity_colon">활동:</string>
    <string name="actions_of_the_rule">실행 액션</string>
    <string name="rules_actions_are_released_under_the_following_circumstances">실행된 액션은 아래 상황에서 해제되고\n액션이 적용되기 이전 상태로 셋팅됩니다</string>
    <string name="setting_complete">설정 완료</string>
    <string name="opening_bracket">[</string>
    <string name="closing_bracket_description">] 상세 정보</string>
    <string name="action_will_be_executed">액션이 실행됩니다</string>
    <string name="focus_aid">Focus Aid</string>
    <string name="id">id</string>
    <string name="password">password</string>
    <string name="sign_in">sign in</string>
    <string name="my_rules">나의 규칙들</string>
    <string name="add_rule">규칙 추가</string>
    <string name="no_rules_press_add_btn">생성된 방해 관리 \n규칙이 없습니다. \n\n규칙 추가 버튼을 터치하여 \n규칙을 추가해 주세요.</string>
    <string name="select_which_apps_to_hide_notifications_from">알림을 처리할 앱 선택하기</string>
    <string name="notification_hiding_settings">알림 숨김 방법 설정하기</string>
    <string name="apps_to_hide_notifications_from">알림을 숨길 앱</string>
    <string name="add_apps">앱 추가</string>
    <string name="press_add_apps">앱 추가 버튼을 터치하여\n알림을 처리할 앱을 추가해 주세요\n(동시에 여러 앱 선택 가능)\n\n모든 앱에 대해서 적용하고 싶은 경우,\n“앱 추가 버튼”을 터치하여\n“모든 앱 선택하기”를 선택해 주세요</string>
    <string name="notification_hiding_keyword">알림 숨김 키워드</string>
    <string name="add_keyword">키워드 추가</string>
    <string name="press_add_keyword">키워드 추가 버튼을 터치하여\n처리할 키워드를 지정해 주세요\n\n지정한 키워드를 메시지에 포함 혹은\n미포함된 알림을 처리할 수 있습니다</string>
    <string name="set_triggers">조건 설정하기</string>
    <string name="add_trigger">조건 추가</string>
    <string name="select_trigger_type">추가할 조건 타입 선택하기</string>
    <string name="add_location_trigger">장소 조건 추가하기</string>
    <string name="add_time_trigger">시간 조건 추가하기</string>
    <string name="add_activity_trigger">활동 조건 추가하기</string>
    <string name="select_type_of_the_trigger">설정할 조건의 타입을 선택하세요.</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="start_focus_aid">시작하기</string>
    <string name="all_app">모든 앱</string>
    <string name="activate_rule">규칙\n활성화</string>
    <string name="exec_after_confirm">사용자 확인 후\n규칙 실행</string>
    <string name="add_btn_description">add button</string>
    <string name="app_block_icon_description">app block icon</string>
    <string name="notification_icon_description">notification icon</string>
    <string name="dnd_icon_description">dnd icon</string>
    <string name="ringer_icon_description">ringer icon</string>
    <string name="menu_btn_description">menu button</string>
    <string name="header_bg_description">header background</string>
    <string name="app_add_btn_description">app add button</string>
    <string name="add_keyword_btn_description">add keyword button</string>
    <string name="location_icon_description">location icon</string>
    <string name="time_icon_description">time icon</string>
    <string name="activity_icon_description">activity icon</string>
    <string name="app_icon_description">app icon</string>
    <string name="delete_btn_description">delete button</string>
    <string name="icon_description">icon</string>
</resources>