<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.yeongil.focusaid.viewModel.viewModel.trigger.ActivityTriggerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_activity"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <RadioButton
                android:id="@+id/drive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{vm.selectedActivity.equals(vm.constDrive)}"
                android:onClick="@{() -> vm.onItemSelected(vm.constDrive)}"
                android:text="@string/while_driving" />

            <RadioButton
                android:id="@+id/bicycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{vm.selectedActivity.equals(vm.constBicycle)}"
                android:onClick="@{() -> vm.onItemSelected(vm.constBicycle)}"
                android:text="@string/while_riding_a_bicycle" />

            <RadioButton
                android:id="@+id/still"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{vm.selectedActivity.equals(vm.constStill)}"
                android:onClick="@{() -> vm.onItemSelected(vm.constStill)}"
                android:text="@string/while_no_activity" />
        </RadioGroup>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/btn_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="cancel_btn, complete_btn" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.45" />

        <Button
            android:id="@+id/complete_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.45" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>