<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.yeongil.focusaid.viewModel.viewModel.action.NotificationActionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/header_bg"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/notification_hiding_settings"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/header_bg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/header_bg" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/header_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="title,header_bg" />

        <TextView
            android:id="@+id/add_app_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/apps_to_hide_notifications_from"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_barrier" />

        <ImageView
            android:contentDescription="@string/app_add_btn_description"
            android:id="@+id/add_app_btn"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_add_btn"
            app:layout_constraintBottom_toBottomOf="@id/add_app_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/add_app_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:text="@string/add_apps"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/add_app_btn"
            app:layout_constraintLeft_toLeftOf="@id/add_app_btn"
            app:layout_constraintTop_toTopOf="@id/add_app_btn" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/app_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="add_app_btn, add_app_text" />

        <androidx.recyclerview.widget.RecyclerView
            recycler_item_list="@{vm.notiAppRecyclerItemList}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="@{vm.allApp ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toTopOf="@id/keyword_top_barrier"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_barrier" />

        <androidx.recyclerview.widget.RecyclerView
            recycler_item_list="@{vm.allAppRecyclerItemList}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="@{vm.allApp ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@id/keyword_top_barrier"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_barrier" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/press_add_apps"
            android:textAlignment="center"
            android:textStyle="italic"
            android:visibility="@{vm.noApp ? View.VISIBLE : View.GONE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_barrier" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/keyword_top_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="add_keyword_text, add_keyword_btn" />

        <TextView
            android:id="@+id/add_keyword_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/notification_hiding_keyword"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/footer_barrier"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_barrier" />

        <ImageView
            android:contentDescription="@string/add_keyword_btn_description"
            android:id="@+id/add_keyword_btn"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_add_btn"
            app:layout_constraintBottom_toBottomOf="@id/add_keyword_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/add_keyword_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/add_keyword"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/add_keyword_btn"
            app:layout_constraintLeft_toLeftOf="@id/add_keyword_btn"
            app:layout_constraintTop_toTopOf="@id/add_keyword_btn" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/keyword_bot_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="add_keyword_text, add_keyword_btn" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/keyword_recycler_view"
            recycler_item_list="@{vm.notiKeywordRecyclerItemList}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/footer_barrier"
            app:layout_constraintTop_toBottomOf="@id/keyword_bot_barrier" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/press_add_keyword"
            android:textAlignment="center"
            android:textStyle="italic"
            android:visibility="@{vm.noKeyword ? View.VISIBLE : View.GONE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/keyword_bot_barrier" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/footer_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="before_btn, complete_btn" />

        <Button
            android:id="@+id/before_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/complete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{vm.actionExists}"
            android:text="@string/complete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>