<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="com.yeongil.focusaid.viewModel.viewModel.action.AppListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/header_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/search_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/select_which_apps_to_hide_notifications_from"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/header_bg" />

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/bg_round_search_bar"
            android:hint="@string/search_app"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="20dp"
            android:text="@={vm.searchText}"
            android:textColor="@color/purple_text"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/select_all_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{()->vm.onClickAllText()}"
            android:text="@string/all_apps_excluding_system_apps"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_bg" />

        <CheckBox
            android:id="@+id/select_all"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="12dp"
            android:buttonTint="@color/purple_background"
            android:checked="@={vm.appItemAllChecked}"
            android:onClick="@{()->vm.onClickAll()}"
            app:layout_constraintBottom_toBottomOf="@id/select_all_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/select_all_title" />

        <View
            android:id="@+id/all_app_line"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="12dp"
            android:background="#454545"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_all" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/header_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="select_all, select_all_title, all_app_line" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            recycler_item_list="@{vm.appRecyclerItemListSearched}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/footer_barrier"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_barrier" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/footer_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="before_btn, complete_btn" />

        <Button
            android:id="@+id/before_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/complete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="@{vm.itemCount > 0}"
            android:text="@string/complete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>